--- a/config/zones/US-FLA-FPL.yaml
+++ b/config/zones/US-FLA-FPL.yaml
@@ -287,9 +287,10 @@ emissionFactors:
       - datetime: '2022-01-01'
         source: eGrid 2022
         value: 289.96851114965034
-      - datetime: '2023-01-01'
+      - _comment: Mean of all US zones
+        datetime: '2023-01-01'
         source: eGrid 2023
-        value: 175.09320207293555
+        value: 757.4527012126907
   lifecycle:
     battery discharge:
       - _comment: used storage values greater than zero.
@@ -370,9 +371,10 @@ emissionFactors:
       - datetime: '2022-01-01'
         source: eGrid 2022; IPCC 2014
         value: 533.9685111496503
-      - datetime: '2023-01-01'
+      - _comment: Mean of all US zones
+        datetime: '2023-01-01'
         source: eGrid 2023; IPCC 2014
-        value: 419.0932020729356
+        value: 1001.4527012126907
     solar:
       datetime: '2021-01-01'
       source: INCER ACV
