--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,14 +41,7 @@ index = [
 [tool.uv.sources]
 electricitymap-contrib-types = { workspace = true }
 
-[dependency-groups]
-dev = [
-    "pytest>=7.4.0,<8",
-    "syrupy>=4.8.0,<5",
-    "requests-mock~=1.3.0",
-    "testfixtures>=7.0.0,<8",
-    "click>=8.0.0,<9",
-]
+[project.optional-dependencies]
 parsers = [
     "beautifulsoup4~=4.6.0",
     "demjson3>=3.0.5,<4",
@@ -65,6 +58,15 @@ parsers = [
     "pydataxm>=0.3.2,<0.4",
     "pycountry>=22.3.5,<23",
     "odfpy>=1.4.1,<2",
+]
+
+[dependency-groups]
+dev = [
+    "pytest>=7.4.0,<8",
+    "syrupy>=4.8.0,<5",
+    "requests-mock~=1.3.0",
+    "testfixtures>=7.0.0,<8",
+    "click>=8.0.0,<9",
 ]
 
 scripts = ["xmltodict>=0.13.0,<0.14"]
